Make build tools jdk8 compliant